--- a/mow.css
+++ b/mow.css
@@ -50,8 +50,8 @@
 
 #mainTable {
     position: relative;
-    width: 710px;
-    height: 340px;
+    /*width: 710px;
+    height: 340px;*/
 }
 
 .playertablecard {
@@ -62,7 +62,7 @@
     height: 112px;
 }
 
-.cardinherd {
+.cardontable {
     position: absolute;
     width: 72px;
     height: 112px;
