--- a/mow.css
+++ b/mow.css
@@ -94,25 +94,31 @@
     font-size: 200%;
 }
 
+#myhand .stockitem, #theherd .stockitem {
+    border-radius:10px;
+    margin:5px;
+    border:1px solid grey;
+}
 
-/*
-    Example of CSS sprites (a black token and a white token, 20x20px each, embedded in the same "tokens.png" 40x20px image):
+#myhand .stockitem:hover {
+    cursor:pointer;
+    margin:4px;
+    border:2px solid black !important;
+}
 
-    .white_token {
-        background-image: url('img/tokens.png');
-        background-position: 0px 0px;
-    }
-    .black_token {
-        background-image: url('img/tokens.png');
-        background-position: -20px 0px;
-    }
-    .token {
-        width: 20px;
-        height: 20px;
-        background-repeat: none;
-    }
-*/
+#myhand .stockitem_selected {
+    margin:3px;
+    transform:scale(1.02);
+    border:2px solid black !important;
+    box-shadow:1px 1px 5px black, 2px 2px 4px black;
+}
 
-
-
-
+#myhand .stockitem.disabled {
+    cursor:not-allowed;
+    opacity:0.5 !important;
+}
+#myhand .stockitem.disabled:hover {
+    cursor:not-allowed;
+    margin:5px;
+    border:1px solid gray !important;
+}
