--- a/mow.css
+++ b/mow.css
@@ -64,6 +64,7 @@
 #direction_wrap {
     margin-left: 10px;
     text-align: center;
+    width: 200px;
 }
 #direction {
     width: 188px;
@@ -74,6 +75,19 @@
 
 .reverseDirection {
     transform: rotate(180deg);
+}
+
+#surrounding_players {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.player_before::before {
+    content: '←';
+}
+.player_after::after {
+    content: '→';
 }
 
 #deck_wrap {
