--- a/mow.css
+++ b/mow.css
@@ -95,8 +95,18 @@
     text-align: center;
 }
 
+#deck {
+    width: 183px;
+    height: 122px;
+    background-image: url('img/card-back.jpg');
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 #remainingCards {
-    font-size: 200%;
+    font-size: 400%;
+    color: white;
+    text-shadow: 0px 0px 10px black, 0px 0px 5px black, 0px 0px 2px black;
 }
 
 .remainingCardsEmpty {
@@ -104,7 +114,7 @@
 }
 
 
-#myhand .stockitem, #theherd .stockitem, #direction {
+#myhand .stockitem, #theherd .stockitem, #direction, #deck {
     border-radius:10px;
     margin:5px;
     border:1px solid grey;
