--- a/mow.css
+++ b/mow.css
@@ -180,3 +180,18 @@
     border-radius:10px;
     display: flex;
 }
+
+.log-arrow:before {
+    content: '▲';
+    display: inline-block;
+}
+
+.rotate90:before {
+    transform: rotate(90deg);
+}
+.rotate180:before {
+    transform: rotate(180deg);
+}
+.rotate270:before {
+    transform: rotate(270deg);
+}
