--- a/src/mow.scss
+++ b/src/mow.scss
@@ -2,6 +2,10 @@
 
 /********* You can start writing your CSS below this line: **********/
 
+.direction-anticlockwise {
+    transform: scaleX(-1);
+}
+
 #direction-text {
     text-align: right;
     font-size: 110%;
@@ -10,10 +14,6 @@
     #direction-play-symbol {
         display: inline-block;
         transition: transform 500ms ease-in-out;
-    
-        &.direction-anticlockwise {
-            transform: scaleX(-1);
-        }
     }
 }
 
