--- a/mow.css
+++ b/mow.css
@@ -205,27 +205,36 @@
 #handdeck #myhand_wrap {
   flex: 1;
 }
-#handdeck #myhand_wrap #myhand .stockitem_selected {
+#handdeck #myhand_wrap #cows-and-farmers {
+  display: flex;
+}
+#handdeck #myhand_wrap #cows-and-farmers #myhand {
+  flex: 3;
+}
+#handdeck #myhand_wrap #cows-and-farmers #myhand .stockitem_selected {
   margin: 3px;
   transform: scale(1.02);
   border: 2px solid black !important;
   box-shadow: 1px 1px 5px black, 2px 2px 4px black;
 }
-#handdeck #myhand_wrap #myhand .stockitem:not(.disabled) {
+#handdeck #myhand_wrap #cows-and-farmers #myhand .stockitem:not(.disabled) {
   cursor: pointer;
 }
-#handdeck #myhand_wrap #myhand .stockitem:hover {
+#handdeck #myhand_wrap #cows-and-farmers #myhand .stockitem:hover {
   margin: 4px;
   border: 2px solid black !important;
 }
-#handdeck #myhand_wrap #myhand .stockitem.disabled {
+#handdeck #myhand_wrap #cows-and-farmers #myhand .stockitem.disabled {
   cursor: not-allowed;
   opacity: 0.5 !important;
 }
-#handdeck #myhand_wrap #myhand .stockitem.disabled:hover {
+#handdeck #myhand_wrap #cows-and-farmers #myhand .stockitem.disabled:hover {
   cursor: not-allowed;
   margin: 5px;
   border: 1px solid gray !important;
+}
+#handdeck #myhand_wrap #cows-and-farmers #myfarmers {
+  flex: 1;
 }
 #handdeck #myhand.bounce {
   animation-name: handBounce;
