--- a/mow.css
+++ b/mow.css
@@ -190,7 +190,7 @@
   display: none;
 }
 
-#myhand .stockitem, #theherd .stockitem, #direction, #deck {
+#myhand .stockitem, #myfarmers .stockitem, #theherd .stockitem, #direction, #deck {
   border-radius: 10px;
   margin: 5px;
   border: 1px solid grey;
@@ -217,24 +217,24 @@
   border: 2px solid black !important;
   box-shadow: 1px 1px 5px black, 2px 2px 4px black;
 }
-#handdeck #myhand_wrap #cows-and-farmers #myhand .stockitem:not(.disabled) {
+#handdeck #myhand_wrap #cows-and-farmers #myfarmers {
+  flex: 1;
+}
+#handdeck #myhand_wrap #cows-and-farmers .stockitem:not(.disabled) {
   cursor: pointer;
 }
-#handdeck #myhand_wrap #cows-and-farmers #myhand .stockitem:hover {
+#handdeck #myhand_wrap #cows-and-farmers .stockitem:hover {
   margin: 4px;
   border: 2px solid black !important;
 }
-#handdeck #myhand_wrap #cows-and-farmers #myhand .stockitem.disabled {
+#handdeck #myhand_wrap #cows-and-farmers .stockitem.disabled {
   cursor: not-allowed;
   opacity: 0.5 !important;
 }
-#handdeck #myhand_wrap #cows-and-farmers #myhand .stockitem.disabled:hover {
+#handdeck #myhand_wrap #cows-and-farmers .stockitem.disabled:hover {
   cursor: not-allowed;
   margin: 5px;
   border: 1px solid gray !important;
-}
-#handdeck #myhand_wrap #cows-and-farmers #myfarmers {
-  flex: 1;
 }
 #handdeck #myhand.bounce {
   animation-name: handBounce;
