--- a/mow.css
+++ b/mow.css
@@ -71,7 +71,7 @@
   animation: none;
   box-shadow: 0 0 5px 5px red;
 }
-#gamezone #playertables #theherd {
+#gamezone #playertables .herd {
   min-height: 183px;
 }
 #gamezone .direction-symbol {
@@ -195,7 +195,7 @@
   display: none;
 }
 
-#myhand .stockitem, #myfarmers .stockitem, #theherd .stockitem, #direction, #deck {
+#myhand .stockitem, #myfarmers .stockitem, #theherds .stockitem, #direction, #deck {
   border-radius: 10px;
   margin: 5px;
   border: 1px solid grey;
