--- a/src/_handdeck.scss
+++ b/src/_handdeck.scss
@@ -2,7 +2,7 @@
     display: none;
 }
 
-#myhand .stockitem, #myfarmers .stockitem, #theherds .stockitem, #direction, #deck {
+#myhand .stockitem, #myfarmers .stockitem, #theherds .stockitem, #direction, #deck, #rowIndicatorBackground {
     border-radius:10px;
     margin:5px;
     border:1px solid grey;
