fix row indicator direction & autoselect for swap

--- a/mow.css
+++ b/mow.css
@@ -212,6 +212,52 @@
     transform: scale3d(0.3, 0.3, 0.3);
   }
 }
+#gamezone .downToUp {
+  animation-name: downToUp;
+  animation-duration: 3s;
+  animation-fill-mode: both;
+}
+@keyframes downToUp {
+  0% {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+  30% {
+    opacity: 1;
+    transform: scale3d(1, 1, 1);
+  }
+  70% {
+    opacity: 1;
+    transform: scale3d(1, -1, 1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale3d(0.3, -0.3, 0.3);
+  }
+}
+#gamezone .upToDown {
+  animation-name: upToDown;
+  animation-duration: 3s;
+  animation-fill-mode: both;
+}
+@keyframes upToDown {
+  0% {
+    opacity: 0;
+    transform: scale3d(0.3, -0.3, 0.3);
+  }
+  30% {
+    opacity: 1;
+    transform: scale3d(1, -1, 1);
+  }
+  70% {
+    opacity: 1;
+    transform: scale3d(1, 1, 1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+}
 
 #opponent-hand {
   width: 660px;
