--- a/src/_tooltips.scss
+++ b/src/_tooltips.scss
@@ -7,6 +7,7 @@
 .tooltip-fly-img {
     display: inline-block;
     width: 20px;
-    height: 18px;
+    height: 20px;
     background-image: url('img/fly.png'); 
+    vertical-align: middle;
 }
