--- a/mow.css
+++ b/mow.css
@@ -400,3 +400,40 @@
 .rotate270:before {
   transform: rotate(270deg);
 }
+
+.log-farmer-card {
+  width: 121px;
+  height: 188px;
+  background: url("img/farmers.jpg");
+  background-size: auto 100%;
+}
+.log-farmer-card[data-type="1"] {
+  background-position-x: 0%;
+}
+.log-farmer-card[data-type="2"] {
+  background-position-x: 11.1111111111%;
+}
+.log-farmer-card[data-type="3"] {
+  background-position-x: 22.2222222222%;
+}
+.log-farmer-card[data-type="4"] {
+  background-position-x: 33.3333333333%;
+}
+.log-farmer-card[data-type="5"] {
+  background-position-x: 44.4444444444%;
+}
+.log-farmer-card[data-type="6"] {
+  background-position-x: 55.5555555556%;
+}
+.log-farmer-card[data-type="7"] {
+  background-position-x: 66.6666666667%;
+}
+.log-farmer-card[data-type="8"] {
+  background-position-x: 77.7777777778%;
+}
+.log-farmer-card[data-type="9"] {
+  background-position-x: 88.8888888889%;
+}
+.log-farmer-card[data-type="10"] {
+  background-position-x: 100%;
+}
