--- a/mow.css
+++ b/mow.css
@@ -437,3 +437,36 @@
 .log-farmer-card[data-type="10"] {
   background-position-x: 100%;
 }
+
+.hand-wrap {
+  display: flex;
+  padding: 0;
+}
+.hand-wrap.hidden {
+  display: none;
+}
+.hand-wrap .hand-label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-right: 5px;
+}
+.hand-wrap .hand-label h3 {
+  flex: 1;
+  text-align: center;
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
+  padding: 5px;
+  text-overflow: ellipsis;
+}
+.hand-wrap .animals {
+  flex: 1;
+}
+.hand-wrap .animals.text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  text-align: center;
+  font-size: 120%;
+}
