--- a/src/mow.scss
+++ b/src/mow.scss
@@ -24,3 +24,44 @@ $cardHeight: 188px;
 @import 'handdeck';
 @import 'tooltips';
 @import 'logs';
+
+
+
+.hand-wrap {
+    display: flex;
+    padding: 0;
+  
+    &.hidden {
+      display: none;
+    }
+  
+    .hand-label {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-right: 5px;
+  
+      h3 {
+        flex: 1;
+        text-align: center;
+        writing-mode: vertical-lr;
+        transform: rotate(180deg);    
+        //color: white;
+        padding: 5px;
+        text-overflow: ellipsis;
+      }
+    }
+  
+    .animals {
+      flex: 1;
+  
+      &.text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        text-align: center;
+        font-size: 120%;
+      }
+    }
+  }
