splitter for 2p rows

--- a/src/_handdeck.scss
+++ b/src/_handdeck.scss
@@ -7,6 +7,14 @@
     margin:5px;
     box-shadow:1px 1px 3px 1px rgba(0, 0, 0, 0.5);
 }
+
+#theherds {
+    hr {
+        margin: 10px 20%;
+        border: 0;
+        box-shadow: 0 0 2px 2px #507e29;
+    }
+}
  
 #handdeck {
     display: flex;
