fix special action cow popin

--- a/src/_gametable.scss
+++ b/src/_gametable.scss
@@ -138,7 +138,8 @@
         .popin-content {
             display: flex;
             background: white;
-            border-radius:10px;
+            border-radius: 10px;
+            box-shadow: 1px 1px 5px 2px #0006;
 
             #pickBlock {
                 display: none;
