--- a/mow.css
+++ b/mow.css
@@ -141,6 +141,7 @@
   display: flex;
   background: white;
   border-radius: 10px;
+  box-shadow: 1px 1px 5px 2px #0006;
 }
 #gamezone #direction_popin .popin-content #pickBlock {
   display: none;
