label for popin

--- a/src/_gametable.scss
+++ b/src/_gametable.scss
@@ -146,6 +146,7 @@
                 padding: 10px;
                 flex-direction: column;
                 justify-content: center;
+                align-items: center;
 
                 &.visible {
                     display: flex;
