--- a/mow.css
+++ b/mow.css
@@ -148,6 +148,7 @@
   padding: 10px;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 #gamezone #direction_popin .popin-content #pickBlock.visible {
   display: flex;
