--- a/mow.css
+++ b/mow.css
@@ -18,6 +18,45 @@
   font-weight: bold;
 }
 
+.player-board .player-hand-card {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  background-image: url("img/cards.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  vertical-align: bottom;
+}
+
+.counters {
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
+}
+.counters .counter {
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+.counters .counter span {
+  padding: 0 5px 0 5px;
+}
+.counters .counter-icon {
+  left: 0;
+  width: 126px;
+  background-size: contain;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  width: 32px;
+  height: 32px;
+}
+.counters .counter-icon.card {
+  background-image: url("img/illustration-left.png");
+}
+.counters .counter-icon.farmer-card {
+  background-image: url("img/farmer-icon.png");
+}
+
 #gamezone {
   display: flex;
   align-items: center;
